--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@ body {
   border-radius: 10px;
 }
 
+/* Stacking order: Page 1 on top, then 2, then 3 */
 #page-1 { z-index: 3; }
 #page-2 { z-index: 2; }
 #page-3 { z-index: 1; }
 
+/* The Flip Class */
 .flipped { transform: rotateY(-180deg); }
 
 /* Flower Animations */
@@ -113,9 +115,25 @@ body {
 </div>
 
 <div id="card-container">
-  <div id="page-1" class="page"></div>
-  <div id="page-2" class="page"></div>
+  
+  <div id="page-1" class="page">
+    <div class="absolute bottom-10 right-4 md:right-8 animate-bounce pointer-events-none z-10">
+        <span class="bg-black/50 backdrop-blur-sm text-white/90 px-4 py-2 rounded-full text-sm border border-white/20 shadow-lg flex items-center gap-2">
+           Tap to turn ➜
+        </span>
+    </div>
+  </div>
+
+  <div id="page-2" class="page">
+    <div class="absolute bottom-10 right-4 md:right-8 animate-bounce pointer-events-none z-10">
+        <span class="bg-black/50 backdrop-blur-sm text-white/90 px-4 py-2 rounded-full text-sm border border-white/20 shadow-lg flex items-center gap-2">
+           Tap to turn ➜
+        </span>
+    </div>
+  </div>
+
   <div id="page-3" class="page"></div>
+
 </div>
 
 <script>
@@ -138,11 +156,12 @@ async function startApp() {
     }
   }
 
-  // Tone.js
+  // Tone.js (Optional initialization)
   if (typeof Tone !== 'undefined') {
     await Tone.start();
   }
 
+  // Hide Start Screen / Show Card
   startScreen.style.opacity = 0;
   setTimeout(() => {
     startScreen.style.display = "none";
@@ -174,6 +193,7 @@ function startFlowers() {
 startButton.addEventListener("click", startApp);
 cardContainer.addEventListener("click", flipPage);
 
+// Load images onto div backgrounds
 window.onload = () => {
   document.getElementById("page-1").style.backgroundImage = "url('Pg1.png')";
   document.getElementById("page-2").style.backgroundImage = "url('Pg2.png')";
